<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetProfileActivity"
    >

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/custom_toolbar"/>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorRed"
        android:layout_below="@id/my_toolbar"
        android:paddingBottom="10dp"
        >

        <ImageView
            android:id="@+id/iv_profile_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/profile_pic"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/tv_doctor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/doctor_name"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:textSize="@dimen/toolbar_text_size"
            android:layout_weight="0.5"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tv_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/doctor_contact"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:layout_weight="0.5"
            />
        <TextView
            android:id="@+id/tv_reg_no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/doctor_reg_no"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:layout_weight="0.5"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/linear_layout"
        android:orientation="vertical"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20dp"
        android:layout_above="@id/btn_next"
        >

        <TextView
            android:id="@+id/tv_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@mipmap/calendar"
            android:hint="@string/dob"
            android:paddingStart="6dp"
            android:textColorHint="@color/colorBlack"
            android:textSize="@dimen/text_size"
            android:layout_marginTop="10dp"
            android:paddingBottom="2dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightBlack"
            android:layout_marginStart="5dp"
            />
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/email"
            android:textSize="@dimen/text_size"
            android:textColorHint="@color/colorBlack"
            android:layout_weight="1"

            android:inputType="textWebEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:backgroundTint="@color/colorLightBlack"
            android:layout_marginStart="1dp"
            />
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/speciality"
            android:textSize="@dimen/text_size"
            android:text="@string/speciality"
            android:textColorHint="@color/colorBlack"
            android:drawableEnd="@mipmap/down_aero"
            android:layout_weight="1"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightBlack"
            android:layout_marginStart="5dp"
            />
        <EditText
            android:id="@+id/et_degree"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/degree"
            android:textSize="@dimen/text_size"
            android:textColorHint="@color/colorBlack"
            android:layout_weight="1"

            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:backgroundTint="@color/colorLightBlack"
            />

        <EditText
            android:id="@+id/et_institution"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/institution"
            android:textSize="@dimen/text_size"
            android:textColorHint="@color/colorBlack"
            android:layout_weight="1"

            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:backgroundTint="@color/colorLightBlack"
            />
        <EditText
            android:id="@+id/et_clinic_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/clinic_name"
            android:textSize="@dimen/text_size"
            android:textColorHint="@color/colorBlack"
            android:layout_weight="1"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:backgroundTint="@color/colorLightBlack"
            />

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/phone_no_if_any"
            android:textSize="@dimen/text_size"
            android:textColorHint="@color/colorBlack"
            android:layout_weight="1"
            android:inputType="phone"
            android:maxLines="1"
            android:digits="0123456789"
            android:imeOptions="actionDone"
            android:backgroundTint="@color/colorLightBlack"
            />

    </LinearLayout>


    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:text="@string/next"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlue"
        android:textSize="@dimen/button_size"
        />


</RelativeLayout>
</layout>