<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_recycler_item"
    android:layout_marginBottom="10dp"
    android:padding="15dp" >

    <ImageView
        android:id="@+id/iv_profile_pic"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:src="@mipmap/patient_icon" />

    <LinearLayout
        android:layout_width="241dp"
        android:layout_height="85dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/iv_profile_pic"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingBottom="1dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/tv_patient_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:hint="@string/patient_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_patient_dob"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:drawableStart="@mipmap/birthday"
            android:drawablePadding="5dp"
            android:hint="@string/patient_birthday" />

        <TextView
            android:id="@+id/tv_mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="2"
            android:drawableStart="@mipmap/call"
            android:drawablePadding="5dp"
            android:hint="@string/patient_mobile_number" />

    </LinearLayout>
</RelativeLayout>
